--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ name:               &name "Gyan Ranjan" # &name is a YAML anchor which can be *r
 email:              gyan3098@gmail.com
 tagline:            "Hacking"
 description: >- # this means to ignore newlines until "baseurl:"
-  "In these 30 days challenge, I will be covering a lot of fields and topics
-  of hacking"
-url:                 https://github.com/gyan3098/30DaysOfHackingChallenge/tree/main
+  In these 30 days challenge, I will be covering a lot of fields and topics
+  of hacking
+url:                 https://github.com/gyan3098/30DaysOfHackingChallenge
 baseurl:             ''
 paginate:            5
 permalink:           pretty
